<resources>
    <string name="app_name">My Services</string>
    <string name="profissionais_btn">Profissionais</string>
    <string name="usuarios_btn">Usuários</string>
    <string name="entrar">Entrar</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>

    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="celular">Celular</string>
    <string name="telefone_fixo">Tel. fixo</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="endereco">Endereço</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="code">Código</string>
    <string name="action_settings">Configurações</string>
    <string name="new_passwd">Nova senha</string>
    <string name="new_passwd_conf">Digite novamente</string>

    <string name="login_btn">Login</string>
    <string name="new_login_btn">Criar conta</string>
    <string name="forgot_btn">Esqueci minha senha</string>
    <string name="change_passwd_btn">Alterar senha</string>
    <string name="ok_btn">OK</string>
    <string name="cancel_btn">Cancelar</string>
    <string name="title_activity_login">Sign in</string>

    <string name="title_wait">Por favor espere</string>
    <string name="msg_send_token_mail">Enviando código de alteração de senha por e-mail...</string>
    <string name="msg_send_new_passwd_mail">Solicitando nova senha...</string>
    <string name="msg_creating_user">Cadastrando usuário...</string>
    <string name="msg_login_in">Realizando login...</string>
    <string name="msg_reset_passwd_request">Alterando senha...</string>

    <string name="msg_criacao_login_error">Erro na criação de conta. Verifique os dados novamente.</string>
    <string name="msg_forgot_passwd_gen_token_error">Erro ao solicitar nova senha!</string>
    <string name="title_activity_forgot_passwd">ForgotPasswdActivity</string>
    <string name="msg_reset_passwd_error">Erro ao resetar senha!</string>

    <string name="title_activity_add_user">AddUserActivity</string>
    <string name="title_activity_services_search">ServicesSearchActivity</string>

    <!-- Strings related to email reset -->
    <string name="forgot_email_sender">yasminbpaula@gmail.com</string>
    <string name="forgot_email_passwsd">200200369</string>
    <string name="forgot_reset_passwd_email_subject">My Services - Alteração de senha</string>
    <string name="forgot_reset_passwd_email_msg">Uma solicitação da alteração de sua senha de acesso do My Services foi realizada.\nPor favor digite o seguinte código de alteração para realizar a alteração de sua senha</string>
    <string name="forgot_new_passwd_email_subject">My Services - Nova senha</string>
    <string name="forgot_new_passwd_email_msg">A sua senha de acesso da aplicação My Services foi alterada para</string>
    <string name="forgot_wrong_token_msg">Código de alteração de senha não confere!</string>
    <string name="forgot_wrong_passwd_reset">Nova senha não confere!</string>

    <!-- action bar -->
    <string name="action_bar_search">Buscar serviços e contatos</string>
    <string name="wait">Buscar serviços e contatos</string>

    <string name="descricao_servico">Descrição do Serviço:</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="proximo">Próximo</string>
    <string name="anterior">Anterior</string>
    <string name="finalizar">Finalizar</string>
    <string name="categoria">Categoria</string>
    <string name="sub_categoria">Subcategoria</string>
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="city">Cidade</string>
    <string name="location">Localização</string>

</resources>
