<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_marginTop="15dp"
        android:src="@drawable/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/login_block"
        android:layout_below="@+id/img_logo"
        android:background="@drawable/linear_rounded_shape"
        android:padding="25dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="@drawable/gray_button"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_username"
                android:drawableLeft="@drawable/ic_user"
                android:inputType="text"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:drawableLeft="@drawable/ic_passwd"
                android:id="@+id/edt_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>



        <Button
            android:layout_marginTop="8dp"
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_button"
            android:text="@string/entrar"
            style="@style/Button_12_Blue"/>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esqueci_minha_senha"
        android:id="@+id/button"
        android:background="@drawable/gray_button"
        style="@style/Button_12_Blue"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profissionais_btn"
        android:background="@drawable/gray_button"
        style="@style/Button_12_Blue"
        android:id="@+id/button2"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"/>

</RelativeLayout>
